--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ dependencies{
     compile 'org.springframework:spring-web:4.1.5.RELEASE'
     compile 'org.apache.httpcomponents:httpclient:4.4'
     compile 'org.springframework.security:spring-security-core:3.2.6.RELEASE'
-
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.4.2'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.4.2'
     testCompile 'junit:junit:4.11'
 }
